solutions of planar graph problems

--- a/graphs-intro/problems.tex
+++ b/graphs-intro/problems.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,12pt]{article}
-
 \usepackage[margin=2.5cm]{geometry}  % change page margins
+
 
 %%% Работа с русским языком
 \usepackage{cmap}					% поиск в PDF
@@ -9,46 +9,53 @@
 \usepackage[utf8]{inputenc}			% кодировка исходного текста
 \usepackage[english,russian]{babel}	% локализация и переносы
 
+
 %%% Дополнительная работа с математикой
-\usepackage{amsfonts,amssymb,amsthm,mathtools} % AMS
-\usepackage{amsmath}
+\usepackage{amsfonts,amssymb,amsmath,amsthm,mathtools,thmtools}
 \usepackage{icomma} % "Умная" запятая: $0,2$ --- число, $0, 2$ --- перечисление
-
-%% Шрифты
-\usepackage{euscript} % Шрифт Евклид
-\usepackage{mathrsfs} % Красивый матшрифт
-\usepackage{pifont}   % Dingbats
-
 %% Перенос знаков в формулах (по Львовскому)
 \newcommand*{\hm}[1]{#1\nobreak\discretionary{}{\hbox{$\mathsurround=0pt #1$}}{}}
 
+%% Шрифты
+\usepackage{euscript,mathrsfs,pifont} % Шрифт Евклид, Красивый матшрифт, Dingbats
+
+
 %%% Работа с таблицами
 \usepackage{array,tabularx,tabulary,booktabs} % Дополнительная работа с таблицами
-\usepackage{longtable}  % Длинные таблицы
-\usepackage{multirow} % Слияние строк в таблице
+\usepackage{longtable,multirow}  % Длинные таблицы + Слияние строк в таблице
 
-\usepackage{color}
-
+%%% Работа с графикой
 \usepackage{graphicx,wrapfig,float}
 \numberwithin{figure}{section}
 \graphicspath{{images-problems/}}
 
-\usepackage{hyperref}
-\hypersetup{
-	colorlinks=true,
-	linkcolor=blue,
-	filecolor=magenta,      
-	urlcolor=cyan,
-}
+%%% Ссылки
+\usepackage{color,hyperref}
+\hypersetup{colorlinks=true, linkcolor=blue, filecolor=magenta, urlcolor=cyan}
 
-\theoremstyle{remark}
-\newtheorem{problem}{Зад.}[section]
-\renewcommand\qedsymbol{$\blacksquare$}
+%%% Теоремы и доказательства
+%\renewcommand\qedsymbol{$\blacksquare$}
+\declaretheoremstyle[
+	spaceabove=0pt, spacebelow=24pt,
+	headfont=\normalfont\bfseries, headpunct={.},
+	notefont=\normalfont\mdseries, notebraces={(}{)},
+	%postheadspace=.5em,
+	postheadspace=\newline,
+	bodyfont=\normalfont, qed=\qedsymbol
+]{solution}
 
-\def\ilet{$\gimel\;$}
-\def\iiff{$\;\Longleftrightarrow\;$}
-\def\iiChi{\mathcal{X}}
-\def\iiTODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
+\declaretheorem[name=Задача,numberwithin=section,style=definition]{problem}
+\declaretheorem[name=Решение,numbered=no,style=solution]{solution}
+
+
+%%% Макросы
+\def\IFF{$\;\Longleftrightarrow\;$}
+\def\CHI{\mathcal{X}}
+\def\TODO{\guillemotleft$\mathcal{TODO}$\guillemotright\textellipsis}
+\def\Gwave{$\tilde{G}$}
+\newcommand\CenterFigure[2]{\begin{figure}[H]\centering\includegraphics[width=#1]{#2}\end{figure}}
+\newcommand\CenterFigureCaption[3]{\begin{figure}[H]\centering\includegraphics[width=#1]{#2}\caption{#3}\end{figure}}
+
 
 %%% Заголовок
 \title{Основы теории графов. \\ Задачи.}
@@ -58,50 +65,49 @@
 \begin{document}
 
 \maketitle
-
 \tableofcontents
 
 
 
 \section{Основы}
 
-\iiTODO
+\TODO
 
 
 
 \section{Деревья}
 
-\iiTODO
+\TODO
 
 
 
 \section{Эйлеровы графы}
 
-\iiTODO
+\TODO
 
 
 
 \section{Паросочетания I}
 
-\iiTODO
+\TODO
 
 
 
 \section{Гамильтоновы графы}
 
-\iiTODO
+\TODO
 
 
 
 \section{Графы деБрейна}
 
-\iiTODO
+\TODO
 
 
 
 \section{Вершинная связность}
 
-\iiTODO
+\TODO
 
 
 
@@ -115,14 +121,14 @@
 	
 	Из получившегося графа $H$ получим сеть $H'$, приписав каждому ребру пропускную способность 1, в качестве истока взяв $s_2$, а в качестве стока — $t_1$. Докажите, что величина максимального потока в сети $H'$ равна величине минимального вершинного разреза в графе $G$.
 \end{problem}
-\begin{proof}
+\begin{solution}
 	В качестве иллюстрации своих рассуждений приведу пример исходного графа:
 	
-	\includegraphics[width=5cm]{flow-problem-step-12-fig1.png}
+	\CenterFigure{5cm}{flow-problem-step-12-fig1.png}
 	
 	и сети, полученной из него по правилам в условии задачи:
 	
-	\includegraphics[width=13cm]{flow-problem-step-12-fig2.png}
+	\CenterFigure{13cm}{flow-problem-step-12-fig2.png}
 	
 	Для краткости буду называть вершины сети вида $v_{i1}$ чётными полувершинами (верхний ряд на рисунке), а вершины вида $v_{i2}$ -- чётными полувершинами.
 	
@@ -137,9 +143,9 @@
 	Теперь заметим, что каждое синее ребро взаимно однозначно соответствует чётно-нечётной паре полувершин в $H$, т.е. их вершине-прототипу в $G$, и его удаление соответствует удалению этой вершины (т.е. удаление некоторого $(v_{i1} \rightarrow v_{i2})$ в $H$ однозначно соответствует удалению $v_i$ в $G$), а минимальный рёберный разрез по синим рёбрам в $H$ соответствует минимальному разделяющему множеству вершин в $G$.
 	
 	Найденный алгоритмом Форда-Фалкерсона максимальный поток -- это поток через минимальный рёберный разрез в $H'$ (какой бы он ни был, он будет среди синих рёбер) и соответвествует такому набору рёбер в $H$, что при его удалении путей между $s2$ и $t1$ не останется. Таким образом, максимальный поток в $H'$ даст нам размер минимального вершинно-разделяющего множества в $G$.
-\end{proof}
+\end{solution}
 
-\iiTODO
+\TODO
 
 
 
@@ -150,18 +156,16 @@
 \begin{problem}
 	Докажите, что любой кубический граф, имеющий не более двух мостов, можно покрыть путями длины 3, не пересекающимися по рёбрам.
 \end{problem}
-\begin{proof}
+\begin{solution}
 	В таком графе найдётся совершенное паросочетание. Удаляя его, мы получаем некоторый подграф. Каждая вершина в нём имеет степень 2. Значит, подграф состоит из циклов. Сориентируем рёбра каждого цикла графа в одном направлении:
-	\begin{center}
-		\includegraphics[width=10cm]{cubic-graph-cover-paths-3.png}
-	\end{center}
+		\CenterFigure{10cm}{cubic-graph-cover-paths-3.png}
 	У каждой вершины будет одно входящее, одно исходящее и одно удалённое ``совершенное'' ребро. Пути длины 3 строим так: ребро ${u,v} \in M$, ребро исходящее из $v$, ребро исходящее из $u$.
-\end{proof}
+\end{solution}
 
 \begin{problem}
   Назовём граф критическим, если в нём нет совершенного паросочетания, но при удалении любой вершины оно появляется. Иначе говоря, для любой вершины в графе есть паросочетание,	покрывающее все вершины, кроме неё. Докажите, что $c_o(G \setminus S) - |S| \leqslant -1$ для любого непустого множества $S$ вершин критического графа.
 \end{problem}
-\begin{proof}
+\begin{solution}
   Рассмотрим произвольное произвольное непустое множество $S$ в графе $G$
   и выделим произвольную (возможно, единственную, если $|S|=1$) вершину $x \in S$.
   Обозначим $G' = G \setminus x$ и $S' = S \setminus x$.
@@ -175,31 +179,18 @@
    \max \limits_{\forall S'' \subset V'(G')} \big[ C_o(G' \setminus S'') - |S''| \big] - 1
    = \mathrm{def}(G') - 1 = 0 - 1 = -1 $
   Что и требовалось доказать. 
-\end{proof}
+\end{solution}
 
-\iiTODO
+\TODO
 
 
 \subsection{Иллюстрации}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=7cm]{cubic-graph-example1.png}
-	\caption{Кубический граф}
-\end{figure}
+\CenterFigureCaption{7cm}{cubic-graph-example1.png}{Кубический граф}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=9cm]{minimum-cubic-graph-with3-bridges.png}
-	\caption{Мин. (16 вершин) кубический граф с 3 мостами (сов.п.с. $\nexists$)}
-\end{figure}
+\CenterFigureCaption{9cm}{minimum-cubic-graph-with3-bridges.png}{Мин. (16 вершин) кубический граф с 3 мостами (сов.п.с. $\nexists$)}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=10cm]{matching-deficit-2.png}
-	\caption{Дефицит графа}
-\end{figure}
-
+\CenterFigureCaption{10cm}{matching-deficit-2.png}{Дефицит графа}
 
 
 
@@ -210,48 +201,40 @@
 
 
 \begin{problem}
-	Доказать, что в любом графе $G$ существует такое линейное упорядочение его вершин, при котором жадный алгоритм раскраски окрасит вершины графа ровно в $\iiChi(G)$ цветов.
+	Доказать, что в любом графе $G$ существует такое линейное упорядочение его вершин, при котором жадный алгоритм раскраски окрасит вершины графа ровно в $\CHI(G)$ цветов.
 \end{problem}
-\begin{proof}
-	Выделяем в графе максимальное независимое множество вершин $S_1$. Они несмежны между собой и получат один цвет $C_1$. Теперь выбираем среди оставшихся вершин графа вершины, смежные с $S_1$ и среди них выбираем максимально независимое множество $S_2$. Опять, их цвет $C2$ одинаковый в силу несмежности, но отличается от $C_1$ в силу смежности с $S_1$. Среди оставшихся выбираем вершины, смежные с $S_1 \cup S_2$, а среди них - максимальное независимое множество $S_3$. Они получат новый цвет $C_3$ итд до $S_q$. В силу максимальности независимых множеств на каждом этапе их общее число $q$ минимально, т.е. равно хроматическому числу $q = \iiChi(G)$.
+\begin{solution}
+	Выделяем в графе максимальное независимое множество вершин $S_1$. Они несмежны между собой и получат один цвет $C_1$. Теперь выбираем среди оставшихся вершин графа вершины, смежные с $S_1$ и среди них выбираем максимально независимое множество $S_2$. Опять, их цвет $C2$ одинаковый в силу несмежности, но отличается от $C_1$ в силу смежности с $S_1$. Среди оставшихся выбираем вершины, смежные с $S_1 \cup S_2$, а среди них - максимальное независимое множество $S_3$. Они получат новый цвет $C_3$ итд до $S_q$. В силу максимальности независимых множеств на каждом этапе их общее число $q$ минимально, т.е. равно хроматическому числу $q = \CHI(G)$.
 	
 	Теперь расставим все вершины по порядку так: сначала вершины из $S_1$ в любом порядке (номера $1,2,...,|S_1|$), потом из $S_2$ в любом порядке ($|S_1|+1$, $|S_1|+2$, ..., $|S_1|+|S_2|$) итд до $S_q$. При проходе в таком порядке жадный алгоритм будет замечать смежность вершин очередного множества $S_i$ только с предыдущими $S_{j<i}$ (поскольку последующие еще не раскрашены) и выдаст ту же раскраску $C_1...C_q$.
-\end{proof}
+\end{solution}
+
 
 
 \begin{problem}[\href{https://stepik.org/lesson/12296/step/4}{ссылка}]
 
-	Граф G называется совершенным, если $\iiChi(G)=\omega(G)$, где $\omega(G)$ -- его кликовое число.
+	Граф G называется совершенным, если $\chi(G)=\omega(G)$, где $\omega(G)$ -- его кликовое число.
 
-	Рассмотрим $n$ замкнутых интервалов $I1,I2,...,In$ на вещественной оси. Построим для этих интервалов граф $G$ на $n$ вершинах $x_1,...,x_n$, соединяя вершины $x_i$ и $x_j$ ребром в том и только в том случае, когда пересечение $I_i \cap I_j \neq \varnothing$. Такой граф $G$ называется интервальным графом (см. рис.). 
-
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=8cm]{interval-graph-coloring.png}
-	\end{figure}
-
+	Рассмотрим $n$ замкнутых интервалов $I_1,I_2,...,I_n$ на вещественной оси. Построим для этих интервалов граф $G$ на $n$ вершинах $x_1,...,x_n$, соединяя вершины $x_i$ и $x_j$ ребром в том и только в том случае, когда пересечение $I_i \cap I_j \neq \varnothing$. Такой граф $G$ называется интервальным графом (см. рис.). 
+		\CenterFigure{8cm}{interval-graph-coloring.png}
 	Доказать, что любой интервальный граф является совершенным.
 \end{problem}
 
 
-\begin{proof}[Эталонное доказательство]
-	\iiTODO
+\begin{solution}[Эталонное доказательство]
+	\TODO
 	
 	Будем раскрашивать вершины интервального графа жадным алгоритмом, упорядочив их предварительно по возрастанию левых концов соответствующих интервалов. Рассмотрим момент, в который жадный алгоритм использовал максимальный цвет $k$, раскрасив им какую-то вершину $x$, соответствующую интервалу $[a,b]$. Так как алгоритм использовал цвет $k$, вершина $x$ была смежна с какими-то $k-1$ уже окрашенными в разные цвета вершинами. Им соответствовали интервалы, начинающиеся левее aa (поскольку вершины уже окрашены), а заканчивающиеся — правее (поскольку есть пересечение с $[a,b]$). Все рассмотренные интервалы пересекаются в точке $a$ а, следовательно, в интервальном графе соответствующие вершины образуют клику размера $k$.
-	Таким образом, $X(G)<=k<=\omega$, но мы знаем, что $\omega(G)<=X(G)$, а значит, $\omega(G)=\iiChi(G)$.
-\end{proof}
+	Таким образом, $\chi(G) \leqslant k \leqslant \omega$, но мы знаем, что $\omega(G) \leqslant \chi(G)$, а значит, $\omega(G)=\chi(G)$.
+\end{solution}
 
-\begin{proof}[Моё кривое доказательство]
 
-	\iiTODO
+\begin{solution}[Моё кривое доказательство]
+
+	\TODO
 
 	Иллюстрация к задаче содержит толстую подсказку о способе рассуждений.
-
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=8cm]{interval-graph-coloring--solution.png}
-	\end{figure}
-
+		\CenterFigure{8cm}{interval-graph-coloring--solution.png}
 	Разобьём все интервалы на непересекающиеся подмножества, соответствующие независимым подмножествам вершин в графе. Первый интервал выберем произвольно. Пусть это будет $I_4$. Затем будем двигаться от правого края интервала вправо, пока не встретим первый непересекающийся с ним интервал ($I_6$). Двигаясь вправо от его правого края найдём следующий и так далее, пока не достигнем максимума всех интервалов. Теперь дижемся влево от левого края $I_4$, пока не найдём предыдущий непересекающийся с ним интервал ($I_1$) или не достигнем минимума всех интервалов. Так мы построим максимальное множество $S_1$ всех попарно непересекающихся интервалов, включающих $I_4$. В нашем случае $S_1=\{I_1,I_4,I_6\}$. Ему в графе соответсвует независимое множество вершин $\{x_1,x_4,x_6\}$.
 	
 	Теперь возьмём какой-либо интервал, не входящий в $S_1$, т.е. пересекающийся с любым из интервалов $S_1$, например $I_3$ и повторим процесс. Получим множество $S_2=\{I_3,I_7\}$. Затем любой интервал, не входящий в $S_1+S_2$, повторим процесс и получим множество $S_3=\{I_2,I_5\}$ попарно непересекающихся между собой интервалов, которые пересекаются с одним из интервалов из $S_1+S_2$. Продолжим процесс, пока интервалы не закончатся.
@@ -259,26 +242,26 @@
 	Каждому множеству интервалов $S_i$ соответствует максимальное по построению независимое множество вершин в графе, причем вершины множества $S_2$ имеют рёбра с $S_1$, $S_3$ c $S_1+S_2$ итд. Если раскрасить $S_1$ в 1-й цвет, $S_2$ во 2-й итд, то мы получим правильную раскраску графа. Этот набор множеств минимален по построению, то есть количество множеств $S_i$ равно хроматическому числу графа $\chi$.
 	
 	Теперь расположим интервалы множества $S_2$ над интервалами $S_1$, $S_3$ над $S_2$ итд, получив вертикальный стек. Там, где некоторая вертикаль пересекает несколько интервалов (они будут из разных множеств), мы получим \textit{клику}. Например, $[I_5,I_3,I_4]$, как показано на рисунке. Максимальный размер клики (кликовое число) будет равен высоте самого высокого интервала в стеке, т.е. числу множеств $S_i$. А оно, как показано выше, равно хроматическому числу. То есть граф является совершенным.
-\end{proof}
+\end{solution}
 
 
 \begin{problem}
 	Доказать, что в графе $G$ c $m$ ребрами хроматическое число удовлетворяет неравенству $\chi(\chi-1) \leqslant 2m$
 \end{problem}
 
-\begin{proof}[Моё доказательство]
+\begin{solution}[Моё доказательство]
 	Возьмём минимальную правильную раскраску в $\chi$ цветов и разделим все вершины по цвету  на множества $S_1,...,S_{\chi}$. Если бы нашлась такая пара $S_i,S_j$, что между ними не было бы рёбер, то второе множество можно было бы перекрасить в цвет первого и уменьшить количество цветов на единицу, что противоречит минимальности. Поэтому между любой парой этих множеств всегда найдётся хотя бы одно ребро. Всего таких пар (и таких рёбер) будет $\displaystyle\frac{\chi(\chi-1)}{2}$. А кроме этих, в графе могут быть и другие рёбра, то есть $\displaystyle m \geqslant \frac{\chi(\chi-1)}2$, что и требовалось доказать.
-\end{proof}
+\end{solution}
 
-\begin{proof}[Еще одно хорошее доказательство]
-	\iiTODO
+\begin{solution}[Еще одно хорошее доказательство]
+	\TODO
 	
-	Пронумеруем все цвета от 1 $\chi$. Теперь $2m$ - это, как мы уже знаем, сумма степеней всех вершин. Теперь покажем, что сумма степеней всех вершин не может быть меньше $\chi(\chi-1)$.
+	Пронумеруем все цвета от 1 до $\chi$. $2m$ -- это, как мы уже знаем, сумма степеней всех вершин. Покажем, что сумма степеней всех вершин не может быть меньше $\chi(\chi-1)$.
 	Сумма степеней вершин может быть равна $\chi(\chi-1)$, например, в полном графе. Теперь покажем почему меньше не может быть. От противного, пусть у нас сумма степеней вершин в каком-то графе равна $k$, которое меньше $\chi(\chi-1)$.
 	Теперь покажем, что каждый цвет $i$ смежен со всеми $(\chi-1)$ другими  цветами. (Цвета смежны, если существует смежные вершины, покрашенные в соответствующие цвета). От противного. Если это не так, то существует цвет $j$, с которым $i$ не смежен, тогда мы можем все вершины покрашенные в цвет $i$ перекрасить в $j$, и раз они такие цвета не были смежны, то после перекраски никакие две вершины, покрашенные в цвет $j$, не будут смежны. Значит, мы может просто убрать $i$ и получим, что хроматическое число меньше чем $\chi$. Противоречие.
 	Получили, что каждый цвет $i$  смежен со всеми $\chi-1$  другими  цветами. А значит, при расчете суммы степеней вершин, будут учтены эти смежности, которые дают вклад $\chi(\chi-1)$. Отсюда получаем, что $\chi(\chi-1) \leqslant k$, а изначально мы утверждали обратное. Противоречие.
 	В итоге, сумма степеней всех вершин не может быть меньше $\chi(\chi-1)$. А значит, и $2m$ не может быть меньше этого значения. 
-\end{proof}
+\end{solution}
 
 
 \subsection{Хроматический многочлен}
@@ -287,7 +270,7 @@
 	Докажите, что хроматический полином для цикла $C_n$ имеет вид
 	$P_n(z) = (-1)^n(z-1)+(z-1)^n$.
 \end{problem}
-\begin{proof}
+\begin{solution}
 	Доказывать будем по индукции.
 	
 	В качестве базы индукции возьмём минимальный цикл на 3 вершинах $C_3$. Он совпадает с $K_3$, и его хроматический многочлен был найден на лекции
@@ -316,12 +299,12 @@
 	 = (z-1)(z-1)^n + (-1)(-1)^n(z-1) = (z-1)^{n+1} + (-1)^{n+1}(z-1)$.
 	
 	Шаг индукции доказан. Формула верна для всех $n$.
-\end{proof}
+\end{solution}
 
 
 \begin{problem}[\href{https://stepik.org/lesson/12299/step/9}{ссылка}]
 
-	\iiTODO
+	\TODO
 
 	Дан связный граф $G$. Хроматический многочлен $P_G(z)$ известен. Построим граф $H$ следующим образом:
 	\begin{enumerate}
@@ -331,29 +314,152 @@
 	\end{enumerate}
 	Таким образом, граф $H$ состоит из двух одинаковых подграфов, которые пересеклись в одной вершине. Выведите формулу хроматического многочлена $P_H(z)$ для графа $H$. В формуле вместо $P_G(z)$ используйте переменную $y$.
 \end{problem}
-\begin{proof}
+\begin{solution}
+	\TODO
 	$\displaystyle P_H(z)=\frac{y^2}{z}$
 	
 	На мой взгляд, самое очевидное решение предполагает чисто комбинаторный ответ и с полиномами работать  практически не приходится.
 	
 	В ветке ниже уже обсуждали, но все равно напишу здесь с картинкой, чтобы сразу в глаза бросалось. Рассмотрите два дерева и соедините их:
-	
-	\includegraphics[width=6cm]{chromatic-number-after-merge.png}
-	
+		\CenterFigure{6cm}{chromatic-number-after-merge.png}
 	Ещё как простой пример для рассмотрения - два графа $K_2$ и результат их слияния $T_3$.
-\end{proof}
+\end{solution}
 
 
 
 \section{Планарные графы I}
 
+
 \begin{problem}
-	Без использования теоремы о четырех красках доказать, что любой планарный связный граф, построенный на не более чем $n=11$ вершинах, является $4$-раскрашиваемым. \\
-	Указание: вначале доказать, что в таком графе существует вершина, степень которой меньше или равна четырем.
+	Доказать, что граф $G$, изображенный на рисунке, можно правильно вложить в плоскость, нарисовав для него соответствующий ему плоский граф \Gwave.
+	\CenterFigure{7cm}{planar1-step3-problem.png}
+	Теорема Fary утверждает, что любой планарный граф можно вложить в плоскость так, чтобы ребра плоского графа \Gwave изображались отрезками прямых. Постарайтесь нарисовать именно такое вложение графа $G$ в плоскость. 
 \end{problem}
-\begin{proof}
+\begin{solution}
+	\ \\
+	\CenterFigure{11cm}{planar1-step3-solution.png}
+\end{solution}
+
+
+\begin{problem}
+	Доказать, что плоский граф \Gwave является двудольным тогда и только тогда, когда двойственный к нему граф $\tilde{G^*}$ является плоским эйлеровым графом.
+\end{problem}
+\begin{solution}
+	Мы знаем, что граф является эйлеровым тогда и только тогда, когда \textit{он связный} и все его вершины имеют чётную степень. Но двойственный граф \textit{всегда связный}, а его вершинам взаимно однозначно соответствуют грани исходного плоского графа. То есть надо доказать, что плоский граф является двудольным тогда и только тогда, когда все его грани имеют чётную степень.
 	
+	\TODO Сократить \href{https://stepik.org/lesson/12345/step/8}{доказательство} с помощью утверждения ``граф двудольный \IFF в нём любой цикл чётный''.
+
+	Докажем достаточность (двудольный $\implies$ грани чётные). Рассмотрим 3 случая.
+	
+	1) Рассмотрим только такие двудольные графы, которые не содержат мостов (пример на рисунке слева). Рассмотрим произвольную грань (внутреннюю или внешнюю) и ограничивающий её цикл. Поскольку граф двудольный, в этом цикле вершины первой доли могут соединяться только с вершинами второй доли, а значит вершины двух долей в цикле чередуются, а значит общее число вершин в цикле чётное, что и требовалось доказать.
+	
+	2) Рассмотрим произвольный двудольный граф, содержащий мосты, но не содержащий циклов (т.е. простое дерево). У него будет единственная внешняя грань. Каждый мост добавляет к её степени 2, а значит её полная степень чётная. Двойственный граф будёт тривиальным эйлеровым графом с одной вершиной и множеством петель.
+
+	3) Рассмотрим случай двудольного плоского графа, содержащего как циклы, так и мосты. Если мосты убрать, получим случай 1, где все грани чётные, т.е. двойственный граф эйлеров. Возвращение каждого из мостов будет увеличивать степень одной из граней на 2, сохраняя свойство чётности. В двойственном графе к соответствующей вершине будут добавляться петли, сохраняя эйлеровость (см. пример на рисунке справа).Достаточность доказана.
+
+	\CenterFigure{8cm}{flat-is-bipartite-iff-dual-is-euler.png}
+
+	Докажем необходимость. Пусть все грани исходного  графа имеют чётную степень. Докажем, что он двудольный, т.е. есть его вершины можно правильно раскрасить в два цвета. Рассмотрим следующие случаи:
+	
+	1) Если грань только одна, то этот граф - дерево (или лес), а значит двудольный.
+	
+	2) Если граф 2-связный, то он допускает разложение на цикл и ручки. Цикл можно раскрасить в 2 цвета, т.к. в нём чётное число вершин. Далее идём по индукции. Добавляем i-ю ручку. Две её концевых вершины уже раскрашены и упираются в ранее раскрашенный сегмент. Продолжая от одного из концов раскрашиваем вершины ручки, чередуя цвета, пока не упрёмся в другой конец. Так как ручка вместе с ранее раскрашенным сегментом является границей некоторой грани, то сумма числа вершин в сегменте и ручке будет чётной, а значит ручка раскрасится правильно. Постепенно добавляя ручки, мы раскрасим весь граф. Получаем, что он двудольный.
+	
+	3) Если граф 1-связный, то мы можем разбить его на 2-связные компоненты, соединённые мостами. Берём любую 2-связную компоненту и раскрашиваем, как описано в случае 2. Идущие от неё мосты раскрашиваем, чередуя цвета, начиная от цвета общей с предыдущей компонентой вершины. Если за мостом идёт ещё одна 2-связная компонента, начинаем раскрашивать её как в случае 2, начиная от цвета общей с мостом вершины. Так продолжаем, пока не раскрасим весь граф. Получаем, что он двудольный.
+	
+	4) Если граф несвязный, разбиваем его на 1-связные компоненты, каждая из которых согласно случаю 3 будет двудольной. Значит, и весь граф двудольный.Необходимость доказана, как и утверждение в целом.
+\end{solution}
+
+
+\begin{problem}
+	С помощью леммы Жордана доказать непланарность графа $K_{3,3}$, показанном на нижеприведенном рисунке:
+		\CenterFigure{4cm}{planar1-step10-why-k33-nonplanar.png}
+\end{problem}
+\begin{solution}
+	Сначала рассмотрим граф без рёбер. Я немного иначе разметил вершины - номерами 1,2,3,4,5,6. Начнём добавлять рёбра и составим "большой" цикл 1-2-3-4-5-6-1 (рис.1). Теперь добавим ребро 1-4. Оно может находиться либо внутри большого цикла, либо вне.
+	
+	Вариант №1 - внутри (рис.2). У нас появился новый "малый" цикл 1-4-5-6-1. Теперь добавим ребро 3-6. Оно не может находиться внутри большого цикла (красный изогнутый пунктир), т.к. иначе оно пересекло бы малый цикл, т.к. вершина 3 находится снаружи малого цикла. Значит, ребро 3-6 нахожится снаружи большого цикла (синее). Теперь мы никак не можем добавить ребро 2-5 (прямой красный пунктир), т.к. относительно нового цикла 1-4-3-6-1 вершины 2 и 5 находятся по разные стороны и по лемме Жордана должны пересечь его.
+		\CenterFigure{14cm}{planar1-step10-solution.png}
+	Вариант №2, когда ребро 1-4 находится снаружи большого цикла, рассматривается аналогично (рис.3).
+\end{solution}
+
+
+
+\begin{problem}
+	Доказать, что в случае плоского графа, имеющего ровно $k$ связных компонент, формула Эйлера принимает вид $n-m+r=k+1$.
+\end{problem}
+\begin{solution}
+	Обозначим $n_i,m_i,r_i$ -- число вершин, рёбер и граней в $i$-й компоненте связности из $k$. По формуле Эйлера $n_i-m_i+r_i=2$. Просуммировать эти равенства нам мешает то, что внешняя грань у всех компонент общая, но входит в $r_i$ каждой компоненты. Поэтому введём $s_i=r_i-1$ -- число \textit{внутренних} граней $i$-й компоненты, и тогда $n_i-m_i+s_i=1$. Просуммировав $k$ таких равенств по $i$ от 1 до $k$, получим $n-m+s=k$, где $n,m,s$ -- суммарное число вершин, рёбер и внутренних граней в графе. Добавив единую для всех компонент внешнюю грань в сумму, получим общее число граней $r=s+1$ и окончательно $n-m+r=k+1$.
+\end{solution}
+
+
+
+\begin{problem}
+	Рассмотрим максимальный простой планарный граф $G$, построенный на $n \geqslant 4$ вершинах и $m$ ребрах. Обозначим через $n_i$ количество вершин степени $i$. Доказать, что для чисел $n_i$ выполняется равенство
+	\[ 3n_3+2n_4+n_5=12+n_7+2n_8+3n_9+4n_{10}+... \]
+	Используя это равенство, доказать, что в графе $G$ имеются по меньшей мере четыре вершины, степени которых не превосходят пяти.
+\end{problem}
+\begin{solution}
+	Общее число вершин
+	$\displaystyle n=n_1+n_2+n_3...+n_{\Delta}$,
+	где $\Delta$ -- наибольшая степень вершины в графе, а $n_i$ -- число вершин степени $i$.
+	
+	Мы суммируем от 1, т.к. максимальный плоский граф будет связным (\TODO -- доказать), т.е. нет изолированных вершин и $n_0=0$.
+	
+	По \textit{I-й теореме теории графов} сумма степеней всех вершин равна $2m$: \[ \sum{\deg(v_k)}=\sum_{i=1}^{\Delta}{i \cdot n_i}=1n_1+2n_2+3n_3...+\Delta n_{\Delta} \]
+	
+	В максимальном плоском графе $m=3n-6$ (а степень любой грани $\deg(f_k)=3$).
+	Умножая на 2, получаем $6n=12+2m$.
+	Раскрывая общее количество вершин $n$ и подставляя вместо $2m$ сумму степеней всех вершин, получаем:
+	\[ 6n_1+6n_2+6n_3+...+6n_{\Delta} = 12+1n_1+2n_2+3n_3+...+\Delta n_{\Delta}\]
+	Приводя подобные члены и упрощая, получаем:
+	\[ 5n_1+4n_2+3n_3+2n_4+n_5 = 12+n_7+2n_8+...+(\Delta-6)n_{\Delta} \]
+
+	Теперь докажем, что в максимальном \textit{простом} плоском графе $n_1=n_2=0$. Воспользуемся тем, что в \textit{максимальном} плоском графе степень любой грани $\deg(f_k)=3$.
+
+	Петли невозможны, т.к граф простой и т.к. у грани $F_a$, инцидентной петле, была бы степень $1 \neq 3$ (на рисунке слева).
+		\CenterFigure{9cm}{max-simple-flat-graph-cannot-have-deg-1-or-2.png}
+	Предположим, что в графе есть вершина $C$ степени 1, но тогда инцидентное ей ребро $BC$ будет мостом и добавит 2 к степени ближайшей грани $F_b$. Но тогда единственный вариант получить степень грани 3 -- это добавить петлю $BB$, а петли запрещены.
+	
+	Плоский граф с вершинами степени 2 возможен на 3-х вершинах $DEF$, и у него степени внутренней и внешней грани будут равны 3, но по условию у нас минимум 4 вершины.
+	
+	Предположим что в графе более 3-х вершин, и имеется вершина $X$ степени 2. Рассмотрим смежные с ней вершины $Y$ и $Z$. Они являются частью границы между 2-мя гранями $F_1$ и$F_2$. Рёбра $XY$ и $XZ$ добавляют 2 к степени грани $F_1$, и остаётся только одно ребро до тройки. Единственный вариант -- это ребро $YZ_{(left)}$, замыкающее границу грани $F_1$. Аналогично рассматриваем грань $F_2$ и получаем наличие второго ребра $YZ_{(right)}$, замыкающего границу грани $F_2$. Но мультирёбра в простом графе запрещены, а значит, мы пришли к противоречию, и вершин степени 2 в нашем графе быть не может.
+
+	Мы доказали, что $n_1=n_2=0$ и формула приобретает окончательный вид:
+	\[ 3n_3+2n_4+n_5 = 12+n_7+2n_8+...+(\Delta-6)n_{\Delta}
+	   \qquad\text{\small(*)} \]
+
+	Минимум правой части достигается при $n_7=n_8=...=n_{\Delta}=0$ и равен 12. Наибольший коэффициент в левой части стоит при $n_3$ и равен 3, т.е. сумма слева достигает минимума по числу вершин $n_3+n_4+n_5$, когда $n_4=n_5=0$, а $n_3=\frac{12}{3}=4$.
+\end{solution}
+
+
+\begin{problem}
+	Граф $G$ называется свободным от треугольников, если в нем отсутствуют простые циклы длины три. Без использования теоремы о четырех красках доказать, что любой такой граф 4-раскрашиваем.
+
+	Указание: предварительно доказать, что в таком графе количество $m$ ребер ограничено сверху величиной $2n-4$, где $n$ --- количество вершин в графе $G$. 
+\end{problem}
+\begin{solution}
+	Граф очевидно должен быть простым, иначе в нём были бы возможны петли и мультирёбра, доказать какое либо ограничение на число рёбер было бы не возможно и формулировка задачи потеряла бы смысл.
+		
+	Поскольку по условию ограничивающий любую грань цикл не может иметь длину 3, то его минимальная длина равна 4, т.е. $\deg(f_i) \geqslant 4$. Т.к. сумма степеней всех граней равна $2m$, то $2m = \sum{\deg(f_i)} \geqslant 4r$. Отсюда $2r \leqslant m$.
+	
+	Умножая на 2 формулу Эйлера для планарных графов $n+r=2+m$, получаем $4+2m-2n=2r \leqslant m$, откуда $4+m \leqslant 2n$, т.е. $m \leqslant 2n-4$.
+	
+	Сумма степеней всех вершин $\sum \deg(v_i) \geqslant \sum \delta = n\delta$, где $\delta$ -- минимальная степень вершины. С другой стороны, $\sum \deg(v_i) = 2m$, причём $m \leqslant 2n-4$, как показано выше. Отсюда $n\delta \leqslant 2m \leqslant 4n-8$, т.е. $(\delta - 4)n \leqslant -8$. Справа число меньше нуля. Слева $n>0$ строго положительно, а значит $\delta-4<0$ строго отрицательно. Получаем, что минимальная степень вершины $\delta < 4$, то есть в графе всегда найдётся какая-то вершина степени $\deg(v) \leqslant 3$.
+	
+	Докажем по индукции, что вершины графа можно раскрасить в 4 цвета. База индукции: в случае 1,2 или 3 вершин утверждение тривиально. Шаг индукции: предположим, что утверждение верно для $n$ вершин и рассмотрим граф из $n+1$ вершины. Как показано выше, у нас найдётся вершина, у которой $\deg(v) \leqslant 3$. Временно удалим её. По предположению индукции, оставшийся граф можно раскрасить в 4 цвета. Сделаем это и вернём вершину. У неё не более 3 соседей, то есть даже в худшем случае соседи имеют не более 3 разных цветов, а значит вершину можно раскрасить 4-м цветом, ч.т.д.
+\end{solution}
+
+
+
+\begin{problem}
+	Без использования теоремы о четырех красках доказать, что любой планарный связный граф, построенный на не более чем $n=11$ вершинах, является $4$-раскрашиваемым.
+	
+	Указание: вначале доказать, что в таком графе существует вершина, степень которой $\leqslant 4$.
+\end{problem}
+\begin{solution}
 	Пусть $\delta = \min \limits_{v \in V(G)} \deg(v)$.
+	
 	Тогда $\delta \cdot V \leqslant \sum \limits_{v \in V(G)} {\deg(v)}
 	      = 2E \leqslant 2(3V-6) = 6V-12$,
 	поскольку для простых связных планарных графов верно $E \leqslant 3V-6$.
@@ -366,74 +472,99 @@
 	Теперь проведём рассуждение, полностью аналогичное приведённому на последней лекции, но вместо 5 цветов и соседей у нас будет 4.
 	
 	Проводим индукцию по количеству вершин. Для $V=4$ утверждение очевидно (а для меньшего числа тривиально/бессмысленно). Предположим, что для $(V-1)$ индукция уже доказана. Докажем теперь шаг индукции для $V$ ($V \leqslant 11$). Выделим вершину степени не больше 4 (мы показали, что она всегда найдётся), временно удалим, раскрасим остальной граф (это возможно по предположению шага) и вернём вершину на место. В худшем случае у вершины 4 соседа у которых 4 разных цвета (иначе раскрашиваем вершину 0 в оставшийся цвет). Например, 1-красный, 2-синий, 3-жёлтый, 4-зелёный, а самой вершине дадим индекс 0, как показано на рисунке.
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=8cm]{stepik-lesson12347-step8-problem.png}
-	\end{figure}
+
+		\CenterFigure{8cm}{stepik-lesson12347-step8-problem.png}
 
 	Сначала выбираем пару смежных вершин 1(красный)-3(жёлтый). Пытаемся перекрасить 1-ю в желтый, если же у неё есть жёлтый сосед 1', пытаемся перекрасить его в красный, при неудаче рассматриваем соседей соседа итд. Если удалось, меняем цвета в цепочке, 1-ю в жёлтый, 0-ю в красный и празднуем успех. В случае полной неудачи, худший случай - это когда цепочка дотянется до вершины 3. Тогда выбираем вторую пару 2(синий)-4(зелёный) и пытаемся перекрасить 4-ю в синий, а если найдётся синий сосед 4', пытаемся раскрасить его в зелёный, при неудаче тянем цепочку дальше. Рано или поздно сине-зелёная цепочка упрётся в красно-жёлтую, потому что та образует вместе с вершиной 0 замкнутый цикл, так что в этом случае удача нам гарантирована. Это доказывает шаг индукции и завершает задачу.
-\end{proof}
+\end{solution}
 
-\iiTODO
+
+\begin{problem}
+	Найти ошибку в \href{https://stepik.org/lesson/12347/step/9}{доказательстве Кемпе}.
+\end{problem}
+\begin{solution}
+	В доказательстве Кемпе предполагается, что сине-красная и сине-жёлтая цепочки пересекаются только в начальной синей точке:
+		\CenterFigure{9cm}{kempe-proof-idea.png}
+	Однако, у них есть общий синий цвет точек, и можно сконструировать контр-пример, где они пересекаются во второй синей точке. Например, на рисунке сине-красная цепочка 1-2-3-4-9-10-11-1 проходит ``насквозь'' сине-жёлтую цепочку 1-2-8-4-6-1 в точке 4:
+		\CenterFigure{9cm}{kempe-proof-error2.png}
+	В этом случае зелёно-желтая цепочка может упереться в сине-жёлтую (и зелёно-красная 1-15-16-17-9 в сине-красную, как показано на рисунке). Финт Кемпе с инверсией цветов уже не прокатит, так как точки ``упора'' смежны.
+\end{solution}
 
 
 
 \section{Планарные графы II}
 
+
 \begin{problem}
 	Доказать с помощью теоремы Куратовского непланарность графа $G$, изображенного на рисунке:
-	\\ \includegraphics[width=3cm]{kuratovsky-task1-stage0.png}
+		\CenterFigure{4cm}{kuratovsky-task1-stage0.png}
 \end{problem}
-\begin{proof}
+\begin{solution}
 	Докажем, что подграф нашего графа, полученный \textit{удалением 4 рёбер}, является подразбиением графа $K_5$, что по критерию Куратовского гарантирует непланарность.
-	\\ Пронумеруем вершины исходного графа:
-	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage1.png}
-	\\ В качестве подмножества для критерия возьмём граф, в котором удалены рёбра 4-1,4-6 слева и 5-3,5-9 справа:
-	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage2.png}
-	\\ Вершины 1,6,3,9 в результате имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся (для ясности немного переместим эти вершины):
-	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage3.png}
-	\\ Удалим подразбиения, заменив на прямые рёбра:
-	\\ \includegraphics[width=5cm]{kuratovsky-task1-stage4.png}
-	\\ Получившийся граф изоморфен графу $K_5$. Доказано.
-\end{proof}
+
+	Пронумеруем вершины исходного графа:
+		\CenterFigure{6cm}{kuratovsky-task1-stage1.png}
+	В качестве подмножества для критерия возьмём граф, в котором удалены рёбра 4-1,4-6 слева и 5-3,5-9 справа:
+		\CenterFigure{6cm}{kuratovsky-task1-stage2.png}
+	Вершины 1,6,3,9 в результате имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся (для ясности немного переместим эти вершины):
+		\CenterFigure{6cm}{kuratovsky-task1-stage3.png}
+	Удалим подразбиения, заменив на прямые рёбра:
+		\CenterFigure{6cm}{kuratovsky-task1-stage4.png}
+	Получившийся граф изоморфен графу $K_5$.
+\end{solution}
 
 
 \begin{problem}
 	Доказать с помощью теоремы Куратовского непланарность графа $G$, изображенного на рисунке:
-	\\ \includegraphics[width=3cm]{kuratovsky-task2-stage0-8angles.png}
+		\CenterFigure{4cm}{kuratovsky-task2-stage0-8angles.png}
 \end{problem}
-\begin{proof}
+\begin{solution}
 	Докажем, что подграф нашего графа, полученный \textit{удалением одного радиального ребра}, является подразбиением графа $K_{3,3}$, что по критерию Куратовского гарантирует непланарность.
-	\\ Пронумеруем вершины исходного графа:
-	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage1.png}
-	\\ В качестве подмножества для критерия возьмём граф, в котором удалено одно радиальное ребро, например ребро 4-8:
-	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage2.png}
-	\\ Cмежные с удаленным ребром вершины 4,8 в подмножестве имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся. Удалим их, заменив на рёбра:
-	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage3.png}
-	\\ Получившийся граф изоморфен графу $K_{3,3}$. Просто переставим вершины на рисунке для наглядности:
-	\\ \includegraphics[width=5cm]{kuratovsky-task2-stage4.png}
-	\\ Доказано.
-\end{proof}
+	Пронумеруем вершины исходного графа:
+		\CenterFigure{6cm}{kuratovsky-task2-stage1.png}
+	В качестве подмножества для критерия возьмём граф, в котором удалено одно радиальное ребро, например ребро 4-8:
+		\CenterFigure{6cm}{kuratovsky-task2-stage2.png}
+	Cмежные с удаленным ребром вершины 4,8 в подмножестве имеют степень 2 и являются \textit{подразбиением} графа, к которому мы стремимся. Удалим их, заменив на рёбра:
+		\CenterFigure{6cm}{kuratovsky-task2-stage3.png}
+	Получившийся граф изоморфен графу $K_{3,3}$. Просто переставим вершины на рисунке для наглядности:
+		\CenterFigure{6cm}{kuratovsky-task2-stage4.png}
+\end{solution}
+
 
 
 \begin{problem}
 	Найти выпуклое вложение в плоскость графа $G$, показанного на рисунке:
-	\\ \includegraphics[width=3cm]{kuratovsky-task3-stage0.png}
+		\CenterFigure{4cm}{kuratovsky-task3-stage0.png}
 \end{problem}
-\begin{proof}
+\begin{solution}
 	Пронумеруем вершины исходного графа:
-	\\ \includegraphics[width=7cm]{kuratovsky-task3-stage1.png}
-	\\ И предъявим вложение:
-	\\ \includegraphics[width=9cm]{kuratovsky-task3-stage2.png}
-\end{proof}
+		\CenterFigure{7cm}{kuratovsky-task3-stage1.png}
+	И предъявим вложение:
+		\CenterFigure{9cm}{kuratovsky-task3-stage2.png}
+\end{solution}
+
+
+
+\begin{problem}
+	Граф, который можно правильно вложить в поверхность рода $g$ и невозможно вложить в поверхность меньшего рода, называется графом рода $g$. Доказать, что род $g(K_n)$ полного графа $Kn$ ($n \ge 3$) удовлетворяет неравенству
+	\[ g(K_n) \ge \frac{(n-3)(n-4)}{12} \]
+\end{problem}
+\begin{solution}
+	Пусть $n,m,r$ -- общее число вершин, рёбер и граней во вложении.
+	По сформулированному на лекции свойству правильное вложение графа при разрезании на грани даст криволинейные многоугольники, а у них степень любой грани $deg(f_i) \geqslant 3$ (получить многоугольники невозможно для $K_1$ и $K_2$, но они отсеяны по условию задачи).
+	Отсюда сумма всех степеней граней $\sum{deg(f_i)} \geqslant 3r$. Поскольку $\sum{deg(f_i)} = 2m$, то $3r \leqslant 2m$.
+	По формуле Эйлера $n+r-m = 2-2g$ для вложения в поверхность рода $g$. Умножая на 3, получаем $3m-3n+6-6g=3r \leqslant 2m$, откуда $6g \geqslant m-3n+6$.
+	В полном графе $K_n$ число рёбер $m=\frac{1}{2}n(n-1)$. Подставляя его в неравенство выше, получим $g \geqslant \frac{1}{6}\left( \frac{1}{2} n(n-1)-3n+6 \right) = \frac{1}{12}(n^2-7n+12) = \frac{1}{12}(n-3)(n-4)$.
+	Это неравенство должно выполняться и при $g=g(K_n)$, ч.т.д.
+\end{solution}
+
 
 
 \begin{problem}
 	Для карты на сфере записать перестановки $\sigma$, $\alpha$, $\varphi$
-	\\ \includegraphics{permutations-on-sphere.png}
+		\CenterFigure{6cm}{permutations-on-sphere.png}
 \end{problem}
-\begin{proof}
+\begin{solution}
 	\ \\
 	$\sigma = (1 7 4 5) (2 6) (3 8)$ \\
 	$\alpha = (1 6) (2 8) (3 7) (5 4)$ \\
@@ -441,11 +572,7 @@
 	$\varphi = \sigma \cdot \alpha \qquad \sigma = \varphi \cdot \alpha \qquad \alpha = \alpha^{-1}$ \\
 	$n=|\sigma|=3 ,\; m=|\alpha|=4 ,\; r=|\varphi|=3$ \\
 	$g = (2-n+m-r)/2 = 0$  
-\end{proof}
-
-
-\iiTODO
-
+\end{solution}
 
 
 
