--- a/graphs-intro/theory.tex
+++ b/graphs-intro/theory.tex
@@ -95,6 +95,10 @@
 
 \section{Деревья}
 
+\begin{theorem}
+	граф двудольный $\Longleftrightarrow$ \iiany цикл в графе чётный
+\end{theorem}
+
 \iiTODO
 
 
@@ -166,7 +170,9 @@
 	2-связный граф допускает разложение на цикл и ручки
 \end{theorem}
 
-1-связный граф можно представить в виде дерева блоков (2-связные подмножества и мосты) и точек сочленения.
+\begin{definition}
+	1-связный граф можно представить в виде дерева блоков (2-связные компоненты + мосты) и точек сочленения
+\end{definition}
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=7cm]{1conn-tree-of-blocks-and-junctons-fig1.png}
@@ -357,7 +363,13 @@
 
 \section{Планарные графы I}
 
-\begin{definition}[Планарный] можно правильно уложить в плоскость/сферу \end{definition}
+\begin{definition}[Планарный]
+	$G$ можно правильно уложить в плоскость (сферу), получив \textit{плоский граф} $\tilde{G}$. Рёбра $\tilde{G}$ пересекаются \textbf{только} в вершинах.
+\end{definition}
+
+\begin{lemma}[Жордана]
+	Если точка $A$ лежит внутри замкнутого контура, а $B$ -- вне его, то любой путь $(A,B)$ пересечёт контур минимум 1 раз
+\end{lemma}
 
 \begin{property} Непланарные -- $K_5$, $K_{3,3}$ \end{property}
 
@@ -367,26 +379,26 @@
 
 \begin{property} $ \sum{\deg(f_i)} = 2|E| \qquad ... = \sum{\deg(v_i)}$ \end{property}
 
-\begin{theorem}	Граница \iiany грани 2-связного плоского графа --- простой цикл \end{theorem}
+\begin{theorem}
+	Граница \iiany грани 2-связного $\tilde{G}$ --- простой цикл
+\end{theorem}
 
 \begin{corollary}
-	Вершины, смежные с \iiany вершиной 3-связного плоского графа -- лежат на простом цикле
+	Вершины, смежные с \iiany вершиной 3-связного $\tilde{G}$ -- лежат на простом цикле
 \end{corollary}
 
 \begin{definition}[Дуальный граф плоского графа]
-	грани $\longrightarrow$ вершины; соединяем дуальные вершины ребром, если исходные грани смежны (т.е. отделены 1 ребром)
+	грани $\longrightarrow$ вершины (с сохранением степеней); соединяем дуальные вершины ребром, если исходные грани смежны (т.е. отделены 1 ребром)
 \end{definition}
 
-\begin{property}
-	Дуальный граф всегда связен; вершины $\longleftrightarrow$ грани (с сохранением степеней)
-\end{property}
+\begin{property} Дуальный граф всегда связен \end{property}
 
 \begin{theorem}[Формула Эйлера для выпуклых многогранников и связных планарных графов]
-	\[ V+F = E+2 \]
+	\[ V+F = E+2 \qquad \text{или} \qquad n+r-m=2 \]
 \end{theorem}
 
 \begin{property}
-	В простом плоском графе $\deg(f_i) \geqslant 3$
+	В простом (без петель и мультирёбер) плоском графе $\deg(f_i) \geqslant 3$
 	\begin{itemize}
 		\item $\deg(f_i)=1$ $\implies$ петля
 		\item $\deg(f_i)=2$ $\implies$ мультиребро
@@ -394,25 +406,33 @@
 \end{property}
 
 \begin{corollary}
-	В простом плоском графе $E \leqslant 3V-6$; если равенство, то это \textbf{max} планарный граф
+	В простом $\tilde{G}$ при $V \geqslant 3$ будет $E \leqslant 3V-6$.
 \end{corollary}
 
-\begin{theorem}[Фэри / Fury]
+\begin{corollary}
+	В простом $\tilde{G}$ при $V \geqslant 3$ будет $\delta=5$.
+\end{corollary}
+
+\begin{definition}[максимальный плоский граф]
+	Если достигли равенства $E=3V-6$.
+\end{definition}
+
+\begin{property}[максимальный плоский граф]
+	$\forall f_i \; \deg(f_i)=3$
+\end{property}
+
+\begin{theorem}[Fary]
 	\iiany планарный граф можно так уложить в плоскость, что все рёбра -- прямые отрезки 
 \end{theorem}
 
 \begin{theorem}[о 4 красках]
-	Для правильной раскраски граней плоского графа (без мостов) хватит 4 цветов
+	Для правильной раскраски \textit{граней} $\tilde{G}$ без мостов хватит 4 цветов.
+	Для правильной раскраски \textit{вершин планарного} графа хватит 4 цветов.
 \end{theorem}
 
 \begin{corollary}
 	Плоский граф $\longrightarrow$ дуальный (грани $\Leftrightarrow$ вершины), а вершины плоского дуального графа $\Leftrightarrow$ вершинам его планарного. Так что задача $\equiv$ правильной раскраске \textbf{вершин} планарного графа
 \end{corollary}
-
-\begin{theorem}[Коши???]
-	если точка $A$ лежит внутри замкнутого контура, а $B$ -- вне его, то любой путь $(A,B)$ пересечёт контур минимум 1 раз
-\end{theorem}
-
 
 \section{Планарные графы II}
 
@@ -425,12 +445,16 @@
 
 \begin{definition}[подразбиение графа] добавление вершин $\deg=2$ внутри рёбер \end{definition}
 
+\begin{lemma}[Томасон]
+	в 3-свяном графе $\exists$ ребро: если его стянуть, граф останется 3-связным
+\end{lemma}
+
 \begin{theorem}[критерий Куратовского]
 	граф планарный \iiff он не содержит подразбиение $K_5$ или $K_{3,3}$
 \end{theorem}
 
 \begin{theorem}[Татт]
-	\iiany 3-связный планарный граф можно вложить на плоскость так, что \iiany внутренняя грань будет выпуклым многоугольником
+	\iiany 3-связный планарный граф можно вложить на плоскость так, что \iiany внутренняя грань будет выпуклым многоугольником (2-связный --- не обязательно)
 \end{theorem}
 
 \begin{definition}[Минор]
@@ -446,21 +470,21 @@
 \end{theorem}
 
 \begin{definition}
-	вложение графа в поверхность рода $g$ правильное, если при разрезании на грани получатся (криволинейные) многоугольники (а не цилиндры итд), т.е. получится карта
+	вложение графа в поверхность рода $g$ правильное, если при разрезании на грани получатся (криволинейные) многоугольники (а не 3-мерные цилиндры итд), т.е. получится карта
 \end{definition}
 
 \begin{property}
-	Род поверхности для сферы $g=0$, род тора $g=1$ (одна дырка).
+	Род поверхности для сферы $g=0$ (без дырок, $2-2g=2$), род тора $g=1$ (одна дырка, $2-2g=0$).
 \end{property}
 
 \begin{theorem}[Эйлера]
-	Характеристика Эйлера для карты (укладки графа): $\iiChi(M) = V+F-E$.
-	Если $\iiChi(M) = 2-2g$ (2 на сфере, 0 на торе), то укладка (вложение) правильная, иначе -- нет. 
+	Эйлерова характеристика карты (укладки): $\chi(M) = V+F-E$.
+	Укладка (вложение) правильная \iiff $\chi(M) = 2-2g$.
 \end{theorem}
 
 $K_5$ и $K_{3,3}$ можно вложить в тор.
 
-\iiTODO
+\ \\ \iiTODO
 
 
 
